Bug fixes to be consistent with provided tests